# NeuralNetwork

./: .appveyor.yml  .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md
BuildScript/: travis_build.sh
CMake/: CompileOptions.cmake
Exclam/src/: Blob.h  Layer.h  LinearLayer.h  common.h  util.h
Includes/CudaTest/: CudaTest.hpp
Includes/Exclam/: Common.h  Model.hpp
Includes/Exclam/Layers/: Layer.hpp  LinearLayer.hpp  SoftmaxLayer.hpp  SoftmaxWithLossLayer.hpp
Includes/Exclam/Test/: Test.h
Includes/Exclam/Utils/: Blob.hpp  Utils.h
Sources/CudaTest/: CMakeLists.txt  CudaTest.cpp  CudaTest.cu
Sources/Exclam/: CMakeLists.txt
Sources/Main/: CMakeLists.txt  main.cpp
